--- a/index.html
+++ b/index.html
@@ -2,10 +2,10 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8">
-    <link rel="icon" href="/src/assets/risiko_fav.jpeg">
+    <link rel="icon" href="/src/assets/logo.jpg">
     <link href="https://cdn.jsdelivr.net/npm/@mdi/font@5.x/css/materialdesignicons.min.css" rel="stylesheet">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Anxiety</title>
+    <title>Risiko-Radar</title>
   </head>
   <body>
     <div id="app"></div>
